# olt-light

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE.md  README.md  build.sh  pyproject.toml
.github/workflows/: pages.yml
examples/: Altiplano CLAB DEMO.postman_collection.json  docker-compose.yml  lab.clab.yml
examples/config-bng/: bng.txt
src/: ecli
src/daemons/: ipfix_exporter.py  onu_dhcp.py  onu_optics.py
src/light_olt/: __init__.py
src/light_olt/cli/: __init__.py  backend.py  common.py  completion.py  confd_cli.py  editing.py  main.py  md_cli.py  rendering.py  schema.py
tests/: test_cli_contexts.py  test_cli_editing.py  test_cli_rendering.py  test_cli_schema.py  test_daemon_imports.py
website/: docusaurus.config.js  package-lock.json  package.json
website/docs/: intro.md  troubleshooting.md
website/docs/explanation/: _category_.json  altiplano-integration.md  architecture.md  public-overlay.md
website/docs/how-to/: _category_.json  cli-guide.md  customize-dhcp.md  customize-ecli.md  customize-optics.md  deploy-lab.md  validate.md
website/docs/reference/: _category_.json  cli-guide.md  project-layout.md  runtime.md
website/docs/tutorials/: _category_.json  containerlab.md  first-build.md
website/i18n/en/: code.json
website/i18n/en/docusaurus-plugin-content-docs/current/: intro.md  troubleshooting.md
website/i18n/en/docusaurus-plugin-content-docs/current/explanation/: _category_.json  altiplano-integration.md  architecture.md  (+1 more)
website/src/css/: custom.css
website/src/pages/: index.js  index.module.css
(+13 files in other folders)
